# BIA_ModelForVehicleAllocation

./: .gitignore  CMakeLists.txt  README.md  dop.txt  main  main.cpp  main.h  model.cpp  model.h  parse.cpp  parse.h
.github/workflows/: c-cpp.yml
HiGHs/include/highs/: HConfig.h
HiGHs/lib/: libhighs.so.1.6.0
HiGHs/lib/pkgconfig/: highs.pc
case_1/: distances_small.xlsx  orders.xlsx  orders_small.xlsx  params_small.xlsx  trucks.xlsx  trucks_small.xlsx
include/: batch_solver.h  chain_generator.h  chain_solver.h  checker.h  data.h  distances.h  flow_solver.h  honest_solver.h  main.h  model.h  orders.h  params.h  parse.h  pre_solver.h  solution.h  solver.h  trucks.h  weighted_cities_solver.h  xlsx_cell.h
include/highs/: HConfig.h
lib/: libhighs.so.1.6.0
lib/pkgconfig/: highs.pc
samples/: distances_small.xlsx  orders_small.xlsx  params.xlsx  trucks_small.xlsx
src/: batch_solver.cpp  chain_generator.cpp  chain_solver.cpp  checker.cpp  data.cpp  distances.cpp  flow_solver.cpp  honest_solver.cpp  main.cpp  model.cpp  orders.cpp  params.cpp  parse.cpp  pre_solver.cpp  solver.cpp  trucks.cpp  weighted_cities_solver.cpp  xlsx_cell.cpp
test/: CMakeLists.txt  main.cpp  solvers_test_small.cpp  solvers_test_tricky.cpp
